--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "reelywood-studio",
   "private": true,
@@ -14,12 +13,17 @@
     "firebase": "^11.0.2",
     "lucide-react": "^0.462.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "three": "0.170.0",
+    "matter-js": "^0.20.0",
+    "gsap": "^3.12.5"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/three": "^0.170.0",
+    "@types/matter-js": "^0.19.6",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
